# DawnStrike

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
config/: automation.example.yaml  telegram.example.env  web_sources.example.yaml
docs/: ALPHAOPS_DECISION_LOGIC.md  ALPHAOPS_V4.md  ARCHITECTURE.md  AUTOMATION.md  BACKTESTING_AND_AUDIT.md  BROWSER_SOURCE_EXTRACTION.md  DASHBOARD_GUIDE.md  DATA_CONTRACT.md  DATA_FLOW.md  DATA_QUALITY.md  DAWNSTRIKE_EXPLAINED.md  E2E_AUTOMATION.md  ENRICHMENT.md  EXPECTANCY_MODEL.md  FINAL_REPO_AUDIT.md  FORMULA.md  FREE_DATA_PIPELINE.md  FREE_SHADOW_MODE.md  GIT_REPAIR.md  HISTORICAL_AUDIT.md  HISTORICAL_CALENDAR.md  HISTORICAL_INGESTION.md  HISTORICAL_SIGNAL_LEDGER.md  IMPROVEMENT_ROADMAP.md  MANUAL_UPLOADS.md  NOTIFICATIONS.md  NOTIFICATION_ONLY_WORKFLOW.md  OPERATIONS.md  OPERATOR_MANUAL.md  OPERATOR_RUNBOOK.md  PERFORMANCE_AUDIT.md  PLAYBOOK_ENGINE.md  PREMARKET_INTELLIGENCE.md  PROVIDER_SETUP.md  RETURN_ATTRIBUTION.md  SCHEDULER_WINDOWS.md  SCREENER_AUTOMATION.md  SECRETS_REQUIRED.md  SIGNAL_ENGINE_V3.md  STRATEGY_TUNING.md  (+9 more)
intraday_scanner/: __init__.py  cli.py  config.py  errors.py  expectancy.py  formula.py  logging_config.py  models.py  paper_audit.py  reporting.py  scheduler.py  scoring.py  snapshot_builder.py
sample_data/: metadata_sample.csv  premarket_snapshot_sample.csv  previous_close_2026-06-17.csv  universe_sample.csv
scripts/: alpaca_live_snapshot.py  register_alphaops_tasks.ps1  register_dawnstrike_automation.ps1  register_dawnstrike_tasks.ps1  register_web_telegram_automation.ps1  (+10 more)
(+151 files in other folders)
