[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dawnstrike-intraday-scanner"
version = "0.1.0"
description = "Provider-agnostic aggressive intraday scanner and paper-audit platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]
browser = [
  "playwright>=1.45",
]

[project.scripts]
intraday-scan = "intraday_scanner.cli:main"
build-snapshot = "intraday_scanner.snapshot_builder:main"
paper-audit = "intraday_scanner.paper_audit:main"

[tool.setuptools.packages.find]
include = ["intraday_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
